--- a/styles.css
+++ b/styles.css
@@ -1,32 +1,101 @@
+* {
+    --sidebar-color: #0369a1;
+    --background-color: #e0f2fe;
+    --container-color: white;
+    --header-color: var(--container-color);
+}
+
 body {
     margin: 0;
 }
 
 .container {
     display: grid;
-    grid-template-columns: 1fr 4fr;
+    grid-template-columns: 1fr 6fr;
     grid-template-rows: 1fr 4fr;
     height: 100vh;
 }
 
+.header-buttons {
+    display: flex;
+    justify-content: space-around;
+}
 
-button {
-    height: 2em;
+.button-28 {
+    appearance: none;
+    background-color: transparent;
+    border: 2px solid var(--sidebar-color);
+    border-radius: 15px;
+    box-sizing: border-box;
+    color: black;
+    cursor: pointer;
+    display: inline-block;
+    font-size: 16px;
+    font-weight: 600;
+    line-height: normal;
+    margin: 0;
+    min-height: 60px;
+    min-width: 0;
+    outline: none;
+    padding: 16px 24px;
+    text-align: center;
+    text-decoration: none;
+    transition: all 300ms cubic-bezier(.23, 1, 0.32, 1);
+    user-select: none;
+    -webkit-user-select: none;
+    touch-action: manipulation;
+    width: 100%;
+    will-change: transform;
+}
+
+.button-28:disabled {
+  pointer-events: none;
+}
+
+.button-28:hover {
+  color: #fff;
+  background-color: var(--sidebar-color);
+  box-shadow: rgba(0, 0, 0, 0.25) 0 8px 15px;
+  transform: translateY(-2px);
+}
+
+.button-28:active {
+  box-shadow: none;
+  transform: translateY(0);
 }
 
 .main-nav {
-    background-color: blue;
+    background-color: var(--sidebar-color);
     grid-column: 1 / 2;
     grid-row: 1 / -1;
     list-style: none;
+    padding: 1em;
+    display: flex;
+    flex-direction: column;
+    gap: clamp(0px, 2em, 80px);
+}
+
+.main-nav h1 {
+    color: aliceblue;
+    font-size: 3em;
+}
+.main-nav li a {
+    color: aliceblue;
+    font-size: 2em;
+    text-decoration: none;
+}
+
+.main-nav li:hover {
+    background-color: black;
 }
 
 .main-header {
-    background-color: grey;
+    background-color: var(--header-color);
     grid-column: 2 / 3;
     display: grid;
     grid-template-columns: 2fr 1fr;
     grid-template-rows: 1fr 1fr;
+    padding: 5px;
 }
 
 .main-header div {
@@ -34,49 +103,83 @@ button {
     align-items: center;
     padding-left: 2em;
 }
+
+.header-buttons {
+    gap: 10px
+}
+
 .search-container {
     gap: 15px;
+}
+
+.search-container img {
+    height: 2em;
 }
 
 .search-container input {
     width: 70%;
     height: 2em;
     border-radius: 15px;
-    background-color: aliceblue;
+    background-color: var(--background-color);
 }
 
-.search-container {
-
-}
 
 .user-info-links {
+    display: flex;
+    justify-content: flex-end;
+    padding-right: 25%;
 }
 
 .user-info-links img {
-    height: 2em;
+    height: 3em;
 }
 
-
-.header-buttons {
+.user-info img {
+    height: 4em;
 }
+
+.user-info-text {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+}
+
+.user-info-text p {
+    padding: 0;
+    margin: 0;
+}
+
 
 main {
-    background-color: antiquewhite;
+    background-color: var(--background-color);
     display: flex;
+    justify-content: space-between;
 }
 
 .projects {
     display: grid;
-    grid-template-columns: 1fr 1fr;
-    grid-template-rows: auto 1fr 1fr;
-    grid-auto-rows: 1fr;
-    gap: 10px;
+    flex: 1;
+    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+    grid-template-rows: 1.75rem 1fr 1fr;
+    gap: clamp(5px, 2em, 40px);
     margin: max(10px);
 }
 
 .project {
-    background-color: aliceblue;
-    border-radius: 5px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    background-color: var(--container-color);
+    border-radius: 10%;
+    width: 100%;
+    overflow: hidden;
+    border: 1px solid #ccc;
+    box-shadow: 0 4px 8px rgb(0 0 0 / 20%);
+}
+
+.project h4, .project p, .announcements h4, .announcements p {
+    padding-left: 1em;
+    padding-right: 1em;
 }
 
 .icon-links {
@@ -93,22 +196,24 @@ main {
 }
 
 .projects h3 {
-    grid-column: span 2;
+    grid-column: 1 / -1;
 }
 
 .right-side {
     display: grid;
-    grid-template-columns: 1fr;
-    grid-template-rows: auto 1fr auto;
-    
-    /* display: grid;
-    grid-template-columns: 1fr;
-    grid-template-rows: auto 1fr auto 1fr;
-    grid-auto-rows: 1fr; */
+    grid-template-rows: 1.75rem auto 1.75rem 1fr;
+    grid-template-columns: minmax(250px, 400px);
+    grid-auto-rows: 1fr;
+    gap: clamp(5px, 2em, 40px);
+    margin: max(10px);
 }
 
-.announcements div, .trending div{
-    background-color: aliceblue;
+.announcements, .trending-container{
+    background-color: var(--container-color);
+    border-radius: 10%;
+    overflow: hidden;
+    border: 1px solid #ccc;
+    box-shadow: 0 4px 8px rgb(0 0 0 / 20%);
 }
 
 .trending-container {
@@ -140,4 +245,3 @@ main {
     margin: 5px;
     font-size: 1em;
 }
-
